# mtt-trend

./: .gitignore  API-DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  DATA-INGESTION.md  README.md  TODO.md  UserGuide.md  deploy.sh  docker-compose.yml  ecosystem.config.cjs  install.md
.claude/: settings.json
.moai/: manifest.json
backend/: =4.0.0  Dockerfile  pyproject.toml  pytest.ini  requirements.txt  test-run.sh
backend/app/: database.py  file_watcher.py  main.py  models.py  schemas.py  sync_service.py
backend/app/routers/: charts.py  stocks.py  sync.py  themes.py
backend/app/utils/: above_ma_utils.py  chart_utils.py  wics_index_utils.py
backend/scripts/: ingest.py  verify_chart_api.py
backend/tests/: conftest.py  test_api_above_ma.py  test_api_charts_csv.py  test_api_dates.py  test_api_group_action.py  test_api_macro.py  test_api_persistent_stocks.py  test_api_source_persistence.py  test_api_sync.py  test_api_theme_special_chars.py  test_api_theme_stocks.py  test_api_wics.py  test_backward_compatibility.py  test_db_isolation.py  test_file_watcher.py  test_indicators_polars.py  test_ingest_cli.py  test_intersection.py  test_spec_mtt_014.py  test_startup_sync.py  test_sync_service.py
backend/tests/fixtures/kodex_leverage/: kodex_leverage.csv
docs/: README.md
frontend/: .env.local.example  Dockerfile  INSTALL.md  TESTING.md  deploy.sh  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test-run.sh  tsconfig.spec.json  verify-implementation.sh  vitest.config.ts  vitest.setup.ts
scripts/: pm2-mtt-backend.sh  pm2-mtt-frontend.sh  (+1 more)
(+184 files in other folders)
